# SI-For-CoRT-

./: README.md  adaptive_cort_si_kaggle.ipynb  pyproject.toml
cort_si/: CORT_SI.py  __init__.py  algorithms.py  gen_data.py  sub_prob.py  transfer_learning_hdr.py  utils.py
examples/: adaptive_cort_si.py  ex1_p_value_CORT.ipynb  ex2_pivot_CORT.ipynb
ptl_si/: CORT_SI.py  gen_data.py  utils.py
run_experiment/: 01_tpr_boxplot.ipynb  02_fpr_uniform_lineplot.ipynb  03_fpr_naive_bonf.ipynb  04_fpr_datasplit.ipynb  05_CoRT_fpr_nt.ipynb  05_CoRT_tpr_nt.ipynb  05_fpr_nt_experiment.ipynb  06_CoRT_tpr_nt.ipynb  06_DS_tpr_nt.ipynb  06_tpr_nt_experiment.ipynb  07_DS_fpr_nt.ipynb  08_DS_tpr_nt.ipynb  09_naive_bonf_fpr_nt.ipynb  10_naive_bonf_tpr_nt.ipynb
run_experiment/results/: CoRT_fpr_p300_nS120_nT100_K5_lamsel0.6_lam00.7.npz  CoRT_fpr_p300_nS120_nT75_K5_lamsel0.6_lam00.7.npz  CoRT_tpr_p300_nS100_nT100_K5_lamsel0.8_lam00.8.npz  CoRT_tpr_p300_nS100_nT50_K5_lamsel0.5_lam00.6.npz  CoRT_tpr_p300_nS100_nT50_K5_lamsel0.8_lam00.8.npz  CoRT_tpr_p300_nS100_nT50_K5_lamsel0.8_lam01.npz  CoRT_tpr_p300_nS120_nT100_K5_lamsel0.6_lam00.7.npz  CoRT_tpr_p300_nS120_nT50_K5_lamsel0.6_lam00.7.npz  DS_fpr_p300_nS120_nT100_K5_lamsel0.6_lam00.7.npz  DS_fpr_p300_nS120_nT50_K5_lamsel0.6_lam00.7.npz  DS_fpr_p300_nS120_nT75_K5_lamsel0.6_lam00.7.npz  DS_tpr_p300_nS100_nT50_K5_lamsel0.5_lam01.npz  DS_tpr_p300_nS100_nT50_K5_lamsel0.8_lam00.8.npz  DS_tpr_p300_nS100_nT75_K5_lamsel0.8_lam00.8.npz  DS_tpr_p300_nS120_nT100_K5_lamsel0.6_lam00.7.npz  (+24 more)
visualization/: 01_draw_fpr_nt.ipynb  02_draw_tpr_nt.ipynb
